--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:test": "cross-env ENV=dev CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
-		"serve:test": "cross-env ENV=prod CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:test": "cross-env ENV=test CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:local": "run-s build:clean build:local:run",
 		"build:test": "run-s build:clean build:test:run",
@@ -24,7 +24,7 @@
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile --json > stats.json",
 		"build:local:run": "cross-env ENV=prod CONFIG=local webpack --bail --progress --profile --json > stats.json",
-		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
+		"build:test:run": "cross-env ENV=test CONFIG=test webpack --bail --progress --profile",
 		"build:browserstack:run": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
 		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"test:clean": "rimraf ./test ./report",
