--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"oclazyload": "1.1.0",
 		"parse-uri": "1.0.0",
 		"showdown": "1.9.0",
-		"three": "0.102.1",
+		"three": "0.103.0",
 		"timeago.js": "3.0.2",
 		"traverse": "0.6.6",
 		"video.js": "6.9.0",
@@ -79,6 +79,7 @@
 		"babel-eslint": "10.0.1",
 		"babel-loader": "8.0.5",
 		"babel-plugin-lodash": "3.3.4",
+		"copy-webpack-plugin": "^5.0.2",
 		"cross-env": "5.2.0",
 		"css-loader": "2.1.0",
 		"eslint": "5.14.1",
