--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
 	"license": "GPL-2.0",
 	"dependencies": {
 		"@uirouter/angularjs": "1.0.22",
-		"angular": "1.7.7",
-		"angular-animate": "1.7.7",
+		"angular": "1.7.8",
+		"angular-animate": "1.7.8",
 		"angular-bootstrap-lightbox": "github:dobavictor/angular-bootstrap-lightbox#patch-1",
 		"angular-elastic": "2.5.1",
 		"angular-gravatar": "0.4.2",
-		"angular-resource": "1.7.7",
-		"angular-sanitize": "1.7.7",
-		"angular-touch": "1.7.7",
+		"angular-resource": "1.7.8",
+		"angular-sanitize": "1.7.8",
+		"angular-touch": "1.7.8",
 		"angular-ui-bootstrap": "2.5.6",
 		"bootstrap": "3.4.1",
 		"draggabilly": "2.2.0",
@@ -66,28 +66,28 @@
 		"videojs-sublime-skin": "1.0.3"
 	},
 	"devDependencies": {
-		"@babel/core": "7.3.3",
-		"@babel/preset-env": "7.3.1",
+		"@babel/core": "7.4.3",
+		"@babel/preset-env": "7.4.3",
 		"@types/faker": "4.1.5",
-		"@types/jasmine": "3.3.9",
+		"@types/jasmine": "3.3.12",
 		"@types/jasminewd2": "2.0.6",
-		"@types/lodash": "4.14.121",
+		"@types/lodash": "4.14.123",
 		"@types/pngjs": "3.3.2",
 		"@types/stream-to-array": "2.3.0",
-		"autoprefixer": "9.4.8",
+		"autoprefixer": "9.5.1",
 		"axios": "0.18.0",
 		"babel-eslint": "10.0.1",
 		"babel-loader": "8.0.5",
 		"babel-plugin-lodash": "3.3.4",
 		"copy-webpack-plugin": "^5.0.2",
 		"cross-env": "5.2.0",
-		"css-loader": "2.1.0",
-		"eslint": "5.14.1",
+		"css-loader": "2.1.1",
+		"eslint": "5.16.0",
 		"extract-text-webpack-plugin": "4.0.0-beta.0",
 		"faker": "4.1.0",
 		"file-loader": "3.0.1",
 		"html-webpack-plugin": "3.2.0",
-		"jasmine": "3.3.1",
+		"jasmine": "3.4.0",
 		"jasmine-console-reporter": "3.1.0",
 		"less": "3.9.0",
 		"less-loader": "4.1.0",
@@ -97,7 +97,7 @@
 		"nib": "1.1.2",
 		"npm-run-all": "4.1.5",
 		"pleasejs": "0.4.2",
-		"pngjs": "3.3.3",
+		"pngjs": "3.4.0",
 		"postcss-loader": "3.0.0",
 		"preload-webpack-plugin": "3.0.0-beta.2",
 		"protractor": "5.4.2",
@@ -106,24 +106,25 @@
 		"pug-html-loader": "1.1.5",
 		"pug-loader": "2.4.0",
 		"raw-loader": "1.0.0",
-		"rollbar-sourcemap-webpack-plugin": "2.5.0",
+		"rollbar-sourcemap-webpack-plugin": "2.5.1",
 		"stream-to-array": "2.3.0",
 		"style-loader": "0.23.1",
 		"stylus": "0.54.5",
 		"stylus-loader": "3.0.2",
 		"svg-sprite-loader": "4.1.3",
-		"svgo": "1.1.1",
+		"svgo": "1.2.1",
 		"svgo-loader": "2.2.0",
-		"typescript": "3.3.3333",
+		"terser-webpack-plugin": "^1.2.3",
+		"typescript": "3.4.2",
 		"uglifyjs-webpack-plugin": "2.1.1",
 		"url-loader": "1.1.2",
-		"webpack": "4.29.5",
-		"webpack-bundle-analyzer": "3.0.4",
-		"webpack-cli": "3.2.3",
-		"webpack-dev-server": "3.2.0",
+		"webpack": "4.29.6",
+		"webpack-bundle-analyzer": "3.2.0",
+		"webpack-cli": "3.3.0",
+		"webpack-dev-server": "3.3.0",
 		"webpack-merge": "4.2.1",
 		"webpack-sources": "1.3.0",
-		"workbox-webpack-plugin": "3.6.3"
+		"workbox-webpack-plugin": "4.2.0"
 	},
 	"engines": {
 		"node": ">=8.0 <9.0"
