--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"angular-sanitize": "1.7.8",
 		"angular-touch": "1.7.8",
 		"angular-ui-bootstrap": "2.5.6",
+		"angularjs-slider": "^7.0.0",
 		"bootstrap": "3.4.1",
 		"draggabilly": "2.2.0",
 		"fg-loadcss": "2.1.0",
