--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"oclazyload": "1.1.0",
 		"parse-uri": "1.0.0",
 		"showdown": "1.9.0",
-		"three": "0.103.0",
+		"three": "0.104.0",
 		"timeago.js": "3.0.2",
 		"traverse": "0.6.6",
 		"video.js": "6.9.0",
@@ -80,7 +80,7 @@
 		"babel-eslint": "10.0.1",
 		"babel-loader": "8.0.5",
 		"babel-plugin-lodash": "3.3.4",
-		"copy-webpack-plugin": "^5.0.2",
+		"copy-webpack-plugin": "5.0.3",
 		"cross-env": "5.2.0",
 		"css-loader": "2.1.1",
 		"eslint": "5.16.0",
@@ -113,19 +113,19 @@
 		"stylus": "0.54.5",
 		"stylus-loader": "3.0.2",
 		"svg-sprite-loader": "4.1.3",
-		"svgo": "1.2.1",
+		"svgo": "1.2.2",
 		"svgo-loader": "2.2.0",
 		"terser-webpack-plugin": "^1.2.3",
-		"typescript": "3.4.2",
-		"uglifyjs-webpack-plugin": "2.1.1",
+		"typescript": "3.4.5",
+		"uglifyjs-webpack-plugin": "2.1.2",
 		"url-loader": "1.1.2",
-		"webpack": "4.29.6",
-		"webpack-bundle-analyzer": "3.2.0",
-		"webpack-cli": "3.3.0",
-		"webpack-dev-server": "3.3.0",
+		"webpack": "4.30.0",
+		"webpack-bundle-analyzer": "3.3.2",
+		"webpack-cli": "3.3.1",
+		"webpack-dev-server": "3.3.1",
 		"webpack-merge": "4.2.1",
 		"webpack-sources": "1.3.0",
-		"workbox-webpack-plugin": "4.2.0"
+		"workbox-webpack-plugin": "4.3.0"
 	},
 	"engines": {
 		"node": ">=8.0 <9.0"
