--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"angular-sanitize": "1.7.8",
 		"angular-touch": "1.7.8",
 		"angular-ui-bootstrap": "2.5.6",
-		"angularjs-slider": "^7.0.0",
+		"angularjs-slider": "7.0.0",
 		"bootstrap": "3.4.1",
 		"draggabilly": "2.2.0",
 		"fg-loadcss": "2.1.0",
@@ -67,8 +67,8 @@
 		"videojs-sublime-skin": "1.0.3"
 	},
 	"devDependencies": {
-		"@babel/core": "7.4.3",
-		"@babel/preset-env": "7.4.3",
+		"@babel/core": "7.4.4",
+		"@babel/preset-env": "7.4.4",
 		"@types/faker": "4.1.5",
 		"@types/jasmine": "3.3.12",
 		"@types/jasminewd2": "2.0.6",
@@ -112,10 +112,10 @@
 		"style-loader": "0.23.1",
 		"stylus": "0.54.5",
 		"stylus-loader": "3.0.2",
-		"svg-sprite-loader": "4.1.3",
+		"svg-sprite-loader": "4.1.6",
 		"svgo": "1.2.2",
 		"svgo-loader": "2.2.0",
-		"terser-webpack-plugin": "^1.2.3",
+		"terser-webpack-plugin": "1.2.3",
 		"typescript": "3.4.5",
 		"uglifyjs-webpack-plugin": "2.1.2",
 		"url-loader": "1.1.2",
