--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
 		"test:compile": "tsc",
 		"test:protractor:local": "cross-env CONFIG=test protractor test/config/protractor.local.js",
 		"test:protractor:browserstack": "cross-env CONFIG=browserstack protractor test/config/protractor.browserstack.js",
-		"lh": "lighthousebot",
-		"postinstall": "npm run selenium:init"
+		"lh": "lighthousebot"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
@@ -119,14 +118,14 @@
 		"svg-sprite-loader": "4.1.6",
 		"svgo": "1.2.2",
 		"svgo-loader": "2.2.0",
-		"terser-webpack-plugin": "1.2.3",
+		"terser-webpack-plugin": "1.2.4",
 		"typescript": "3.4.5",
-		"uglifyjs-webpack-plugin": "2.1.2",
+		"uglifyjs-webpack-plugin": "2.1.3",
 		"url-loader": "1.1.2",
 		"webpack": "4.31.0",
 		"webpack-bundle-analyzer": "3.3.2",
 		"webpack-cli": "3.3.2",
-		"webpack-dev-server": "3.3.1",
+		"webpack-dev-server": "3.4.1",
 		"webpack-merge": "4.2.1",
 		"webpack-sources": "1.3.0",
 		"workbox-webpack-plugin": "4.3.1"
