--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
+		"@elastic/apm-rum": "4.0.1",
 		"@uirouter/angularjs": "1.0.22",
 		"angular": "1.7.8",
 		"angular-animate": "1.7.8",
