--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"bootstrap": "3.4.1",
 		"draggabilly": "2.2.0",
 		"fg-loadcss": "2.1.0",
+		"firebase": "6.0.2",
 		"imagesloaded": "4.1.4",
 		"lodash": "4.17.11",
 		"ment.io": "0.9.23",
