--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:test": "cross-env ENV=dev CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
-		"serve:test": "cross-env ENV=test CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:test": "cross-env ENV=test CONFIG=test FIREBASE_CONFIG=./config/firebase.local.json webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:local": "run-s build:clean build:local:run",
 		"build:test": "run-s build:clean build:test:run",
@@ -53,7 +53,7 @@
 		"bootstrap": "3.4.1",
 		"draggabilly": "2.2.0",
 		"fg-loadcss": "2.1.0",
-		"firebase": "6.0.2",
+		"firebase": "6.0.4",
 		"imagesloaded": "4.1.4",
 		"lodash": "4.17.11",
 		"ment.io": "0.9.23",
@@ -70,12 +70,12 @@
 		"videojs-sublime-skin": "1.0.3"
 	},
 	"devDependencies": {
-		"@babel/core": "7.4.4",
-		"@babel/preset-env": "7.4.4",
+		"@babel/core": "7.4.5",
+		"@babel/preset-env": "7.4.5",
 		"@types/faker": "4.1.5",
 		"@types/jasmine": "3.3.12",
 		"@types/jasminewd2": "2.0.6",
-		"@types/lodash": "4.14.129",
+		"@types/lodash": "4.14.132",
 		"@types/pngjs": "3.3.2",
 		"@types/stream-to-array": "2.3.0",
 		"autoprefixer": "9.5.1",
@@ -119,11 +119,11 @@
 		"svg-sprite-loader": "4.1.6",
 		"svgo": "1.2.2",
 		"svgo-loader": "2.2.0",
-		"terser-webpack-plugin": "1.2.4",
+		"terser-webpack-plugin": "1.3.0",
 		"typescript": "3.4.5",
 		"uglifyjs-webpack-plugin": "2.1.3",
 		"url-loader": "1.1.2",
-		"webpack": "4.31.0",
+		"webpack": "4.32.2",
 		"webpack-bundle-analyzer": "3.3.2",
 		"webpack-cli": "3.3.2",
 		"webpack-dev-server": "3.4.1",
