--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 		"timeago.js": "3.0.2",
 		"traverse": "0.6.6",
 		"video.js": "6.9.0",
-		"videojs-sublime-skin": "1.0.3"
+		"videojs-sublime-skin": "1.0.3",
+		"wpc-emu": "github:vpdb/wpc-emu"
 	},
 	"devDependencies": {
 		"@babel/core": "7.4.5",
